🐛  (Carter Ryan ) Fixes pill padding so text doesnt wrap

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -108,7 +108,7 @@ body {
   color: var(--white);
   display: flex;
   justify-content: center;
-  padding: 0.7rem 1.25rem;
+  padding: 0.7rem 1rem;
   text-align: center;
   transition: all 0.25s ease-in-out;
   width: auto;
